<resources>
    <string name="app_name">NZ Driving Test</string>

    <string name="card_bike_header">Motorbike Test</string>
    <string name="card_car_header">Car Test</string>
    <string name="main_menu_img_description">NZ Driving Test App</string>
    <string name="main_menu_car_test">Car Test</string>
    <string name="main_menu_motorbike_test">Motorbike Test</string>
    <string name="menu_questions">All Questions</string>
    <string name="menu_test">Test Simulator</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_review">Review Mistakes</string>
    <string name="menu_send_report">Send report</string>
    <!-- strings in statistics fragment -->
    <string name="stat_title_car">CAR TEST</string>
    <string name="stat_title_mb">MOTORBIKE TEST</string>
    <string name="stat_clear">CLEAR</string>
    <!-- strings in exit dialog -->
    <string name="exit_ok">OK</string>
    <string name="exit_cancel">Cancel</string>
    <string name="exit_confirm">Do you really want to quit test mode?</string>
    <!-- strings in test result dialog -->
    <string name="result_try_again">Try again</string>
    <string name="result_quit_test">Quit</string>
    <string name="result_status_passed">TEST PASSED</string>
    <string name="result_status_failed">TEST FAILED</string>
    <string name="result_status_statistics">STATISTICS</string>
    <!-- strings test result dialog -->
    <string name="answer_correct">CORRECT!</string>
    <string name="answer_wrong">INCORRECT!</string>
    <!-- strings in about dialog -->
    <string name="about_title">ABOUT</string>
    <string name="about_text">
        New Zealand Driving Test App
        \nVersion 1.3
        \nDeveloped by:
        \nVladimir Gladun
        \nWebsite:
        \n<a href="http://nzdrivingtest.co.nf/">http://nzdrivingtest.co.nf/</a>
        \nEmail:
        \nvvgladoun@gmail.com
    </string>
    <!-- stored preferences -->
    <string name="file_key_statistics_car">STATISTICS_CAR</string>
    <string name="file_key_statistics_mb">STATISTICS_MOTORBIKE</string>
    <string name="saved_questions_count">QUESTIONS_TOTAL</string>
    <string name="saved_mistakes_count">MISTAKES_TOTAL</string>
    <string name="saved_average_score">AVERAGE_SCORE</string>
    <string name="saved_average_time">AVERAGE_TIME</string>
    <!-- strings in settings -->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove_all">Clear all</string>
    <string name="action_remove_current">Remove question</string>
    <!-- strings in send menu TOSUBMIT-->
    <string name="send_text">If you have any questions
        or want to report about the error, please contact me.</string>
    <string name="send_sms">SEND SMS</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="send_email_address">vvgladoun@gmail.com</string>
    <string name="send_sms_phone">0210303374</string>
    <string name="send_email_subject">report from NZ Driving test app</string>

</resources>
