<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/main_screen_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/main_menu_img_description"
            android:scaleType="centerCrop"
            android:src="@drawable/bike_card" />

        <!-- material design flat button -->
        <!-- with icon on the left and centered text -->
        <!-- TODO: add icons -->
        <Button
            android:id="@+id/btn_menu_mb_questions"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_questions"
            android:gravity="center"
            android:text="@string/menu_questions" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <Button
            android:id="@+id/btn_menu_mb_test"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_test"
            android:gravity="center"
            android:text="@string/menu_test" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />
        <Button
            android:id="@+id/btn_menu_mb_statistics"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_statistics"
            android:gravity="center"
            android:text="@string/menu_statistics" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />
        <Button
            android:id="@+id/btn_menu_mb_review"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_review"
            android:text="@string/menu_review" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

    </LinearLayout>
</ScrollView>
