<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />

    <TextView
        android:id="@+id/text_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/exit_confirm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />
    <!-- add buttons to start new test or quit -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit_ok_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit_ok" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/separator" />

        <Button
            android:id="@+id/exit_cancel_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit_cancel" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />

</LinearLayout>