<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_screen_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/main_menu_img_description"
            android:scaleType="centerCrop"
            android:src="@drawable/main_card" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main_car"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_car_grey"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_main_car"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_menu_car_test" />

        </RelativeLayout>

        <!-- separator -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <!-- Buttons with scaled images: -->
        <!-- RL was used to scale icons -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main_mb"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_bike_grey"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_main_motorbike"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_motorbike_test" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

    </LinearLayout>
</ScrollView>
