<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/questionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- CAR TEST STATISTICS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/statistics_car_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_statistics"
                android:padding="10dp"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/stat_title_car"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_car_total" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_car_correct" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_car_incorrect" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_car_avg_scope" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_car_avg_time" />
        <Button
            android:id="@+id/stat_car_clear_btn"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/material_yellow_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stat_clear" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />
        <!-- MOTORBIKE TEST STATISTICS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/statistics_mb_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_statistics"
                android:padding="10dp"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:text="@string/stat_title_mb"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_mb_total" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_mb_correct" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_mb_incorrect" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_mb_avg_scope" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:id="@+id/stat_mb_avg_time" />
        <Button
            android:id="@+id/stat_mb_clear_btn"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/material_yellow_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stat_clear" />
    </LinearLayout>

</ScrollView>